Avoid retaining a large HashSet for immutable sets of zero/1 elements